--- a/style.css
+++ b/style.css
@@ -16,4 +16,42 @@ h3{
 .punto1{
 margin-top: 2px;
 }
+.whatsapp {
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    z-index:100;
+  }
+  
+  .whatsapp-icon {
+    margin-top:13px;
+  }
 
+/* ------------------BUSCADOR------------------------ */
+.info{
+    display: inline-block;
+    color: rgb(173, 173, 173);
+}
+
+
+
+#listaArticulos{
+    font-size: 30px;
+    margin-top: 20px;
+    list-style: none;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+}
+
+
+.filtro{
+    display: none;
+}
