--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ margin-top: 2px;
   }
 
 /* ------------------BUSCADOR------------------------ */
-.info{
-    display: inline-block;
-    color: rgb(173, 173, 173);
+.new{
+    color: rgb(255, 75, 75);
 }
 
 
