--- a/style.css
+++ b/style.css
@@ -34,11 +34,12 @@ margin-top: 2px;
     margin-top:13px;
   }
 
-/* ------------------BUSCADOR------------------------ */
-.info{
-    display: inline-block;
-    color: rgb(173, 173, 173);
+.celda{
+    border: .5px solid rgb(229, 229, 229);
 }
+
+/* ------------------BUSCADOR------------------------ */
+
 
 
 
